proj_arm/logs/moveit_tutorials/build.make.043.log.stderr
/home/andreea/ws_moveit/src/moveit_tutorials/doc/move_group_interface/src/move_group_interface_tutorial.cpp:37:30: warning: missing terminating " character
   37 |     posture.joint_names[0] = "gripper_finger_;
      |                              ^
/home/andreea/ws_moveit/src/moveit_tutorials/doc/move_group_interface/src/move_group_interface_tutorial.cpp:37:30: error: missing terminating " character
   37 |     posture.joint_names[0] = "gripper_finger_;
      |                              ^~~~~~~~~~~~~~~~~
make[2]: *** [doc/move_group_interface/CMakeFiles/move_group_interface_tutorial.dir/build.make:63: doc/move_group_interface/CMakeFiles/move_group_interface_tutorial.dir/src/move_group_interface_tutorial.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:4280: doc/move_group_interface/CMakeFiles/move_group_interface_tutorial.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
